<resources>
    <string name="app_name">ContactManager</string>
    <string name="champNom">Nom :</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Contact Manager</string>
    <string name="titre">Contact Manager</string>
    <string name="champNumTel">Num Tel</string>
    <string name="ajouter">Ajouter</string>
    <string name="champ2">Liste des contacts</string>
</resources>
