<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/titre"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="60dp"
                android:text="@string/champNom"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/nom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="60dp"
                android:text="@string/champNumTel"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/tel"
                android:layout_width="fill_parent"
                android:inputType="phone"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/ajouter"
            android:text="@string/ajouter"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />



    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/champ2"
        android:layout_height="wrap_content" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical"/>
</LinearLayout>
